cmake_minimum_required(VERSION 3.13)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(lib3rd/Catch2)

add_subdirectory(problems/1_Two_Sum)
add_subdirectory(problems/2_Add_Two_Numbers)
add_subdirectory(problems/3_Longest_Substring_Without_Repeating_Characters)
add_subdirectory(problems/10_Regular_Expression_Matching)
add_subdirectory(problems/26_Remove_Duplicates_from_Sorted)
add_subdirectory(problems/27_Remove_Element)
add_subdirectory(problems/28_Implement_strStr)
add_subdirectory(problems/33_Search_in_Rotated_Sorted_Array)
add_subdirectory(problems/34_Find_First_and_Last_Position_of_Element_in_Sorted_Array)
add_subdirectory(problems/35_Search_Insert_Position)
add_subdirectory(problems/36_Valid_Sudoku)
add_subdirectory(problems/37_Sudoku_Solver)
add_subdirectory(problems/38_Count_and_Say)
add_subdirectory(problems/39_Combination_Sum)
add_subdirectory(problems/40_Combination_Sum_II)
add_subdirectory(problems/41_First_Missing_Positive)
add_subdirectory(problems/43_Multiply_Strings)
add_subdirectory(problems/44_Wildcard_Matching)

